--- a/src/main/resources/templates/Fragments/Admin/sidebar.html
+++ b/src/main/resources/templates/Fragments/Admin/sidebar.html
@@ -18,12 +18,12 @@
     <div class="sidebar-section">Principal</div>
     <ul class="sidebar-menu">
 
-        <li>
-            <a th:href="@{/Admin/slices}" th:classappend="${activeMenu == 'slices' ? 'active' : ''}" data-section="slices">
-                <i class="fas fa-layer-group"></i>
-                <span>Slices</span>
-            </a>
-        </li>
+<!--        <li>-->
+<!--            <a th:href="@{/Admin/slices}" th:classappend="${activeMenu == 'slices' ? 'active' : ''}" data-section="slices">-->
+<!--                <i class="fas fa-layer-group"></i>-->
+<!--                <span>Slices</span>-->
+<!--            </a>-->
+<!--        </li>-->
         <li>
             <a th:href="@{/Admin/users}" th:classappend="${activeMenu == 'users' ? 'active' : ''}" data-section="users">
                 <i class="fas fa-users"></i>
@@ -34,6 +34,12 @@
             <a th:href="@{/Admin/availability-zones}" th:classappend="${activeMenu == 'availability' ? 'active' : ''}" data-section="zones">
                 <i class="fas fa-network-wired"></i>
                 <span>Zonas</span>
+            </a>
+        </li>
+        <li>
+            <a th:href="@{/Admin/queue-metrics}" th:classappend="${activeMenu == 'queue-metrics' ? 'active' : ''}" data-section="queue-metrics">
+                <i class="fas fa-network-wired"></i>
+                <span>Métricas de Colas</span>
             </a>
         </li>
     </ul>
