--- a/src/main/resources/templates/UserPages/SliceList.html
+++ b/src/main/resources/templates/UserPages/SliceList.html
@@ -287,6 +287,17 @@
         .select2-container--bootstrap-5 .select2-results__option--highlighted * {
             color: #ffffff !important;
         }
+
+
+        .modal-content {
+            height: auto; /* Ajusta la altura automáticamente */
+        }
+
+        .modal-body {
+            max-height: none; /* Permite que el contenido crezca sin restricciones */
+            overflow: visible; /* Elimina el scroll interno */
+        }
+
     </style>
 
     <!-- Estilos DATATABLES -->
