--- a/src/main/resources/templates/Fragments/User/sidebar.html
+++ b/src/main/resources/templates/Fragments/User/sidebar.html
@@ -21,12 +21,6 @@
     <div class="sidebar-section">Principal</div>
     <ul class="sidebar-menu">
         <li>
-            <a th:href="@{/Admin/dashboard}" th:classappend="${activeMenu == 'dashboard' ? 'active' : ''}">
-                <i class="fas fa-tachometer-alt"></i>
-                <span>Dashboard</span>
-            </a>
-        </li>
-        <li>
             <a th:href="@{/User/slice}" th:classappend="${activeMenu == 'slice' ? 'active' : ''}" data-section="slice">
                 <i class="fas fa-layer-group"></i>
                 <span>Slice</span>
@@ -41,6 +35,12 @@
             <a th:href="@{/User/sketch}" th:classappend="${activeMenu == 'sketch' ? 'active' : ''}" data-section="sketch">
                 <i class="fas fa-pencil-alt"></i>
                 <span>Sketch</span>
+            </a>
+        </li>
+        <li>
+            <a th:href="@{/User/securityGroup}" th:classappend="${activeMenu == 'securityGroup' ? 'active' : ''}" data-section="securityGroup">
+                <i class="fas fa-shield-halved"></i>
+                <span>Security Groups</span>
             </a>
         </li>
     </ul>
